# api/docs/swagger.yaml
@@ -25,10 +25,12 @@ definitions:
         type: string
       email:
         type: string
-      full_name:
+      first_name:
         type: string
       id:
         type: integer
+      last_name:
+        type: string
       phone:
         type: string
       vip_level:
@@ -38,7 +40,9 @@ definitions:
     properties:
       customer_id:
         type: integer
-      full_name:
+      first_name:
+        type: string
+      last_name:
         type: string
       total_spent:
         type: number
@@ -105,7 +109,7 @@ definitions:
     properties:
       email:
         type: string
-      full_name:
+      first_name:
         type: string
       hired_at:
         type: string
@@ -113,6 +117,8 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      last_name:
+        type: string
       phone:
         type: string
       role_id:
@@ -351,7 +357,9 @@ definitions:
     properties:
       avg_check:
         type: number
-      full_name:
+      first_name:
+        type: string
+      last_name:
         type: string
       orders_count:
         type: integer
